--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "mm_maze_solver"
+name = "mm_maze_solver_bin"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+glob = "0.3.0"
+mm_maze_solver = { path = ".." }
